--- a/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
+++ b/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 17:13:31 GMT
+    - Wed, 25 Oct 2017 18:38:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=8fn5vv20t10vbsigv8j01q5t13; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 17:13:31 GMT
+recorded_at: Wed, 25 Oct 2017 18:38:16 GMT
