--- a/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
+++ b/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:13:55 GMT
+    - Wed, 25 Oct 2017 18:50:02 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=d1tr93sm21n0tap49p0p7rmsn1; path=/
+    - PHPSESSID=ctldoobi088idpe4sm1mopkns7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:13:56 GMT
+recorded_at: Wed, 25 Oct 2017 18:50:03 GMT
