--- a/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
+++ b/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:35:51 GMT
+    - Wed, 25 Oct 2017 18:56:41 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=o7mptqfat2v1ocbs7ur1bq1107; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:35:51 GMT
+recorded_at: Wed, 25 Oct 2017 18:56:42 GMT
