--- a/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
+++ b/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 17:33:38 GMT
+    - Wed, 25 Oct 2017 19:05:34 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=05ngpgdt737gegc9pokbaivgk7; path=/
+    - PHPSESSID=ujltjf0tu6o5iq55lufpg1l9m4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 17:33:39 GMT
+recorded_at: Wed, 25 Oct 2017 19:05:35 GMT
