--- a/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
+++ b/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 18:45:21 GMT
+    - Thu, 26 Oct 2017 18:48:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7ol43c50of7gh3r8otg6e3oa70; path=/
+    - PHPSESSID=afu12qk7edo272rn1kqsq20aq2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 18:45:22 GMT
+recorded_at: Thu, 26 Oct 2017 18:48:20 GMT
