--- a/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
+++ b/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:21:51 GMT
+    - Thu, 26 Oct 2017 18:52:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8ln4c0sj03js0ohlptepcpsql0; path=/
+    - PHPSESSID=m58uqqib9vbp71og09qrltsql2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:21:52 GMT
+recorded_at: Thu, 26 Oct 2017 18:52:55 GMT
