--- a/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
+++ b/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 18:38:04 GMT
+    - Thu, 26 Oct 2017 19:01:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=53uao1b4hd33sn9karsb4og7b1; path=/
+    - PHPSESSID=33qumnfuamnaf7f9miegav7l12; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 18:38:06 GMT
+recorded_at: Thu, 26 Oct 2017 19:01:35 GMT
