--- a/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
+++ b/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:20:55 GMT
+    - Thu, 26 Oct 2017 19:05:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=m9dbqbd8046fga5hfgsrr1lgs3; path=/
+    - PHPSESSID=bmj4elng1sili5pamorv7j1165; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:20:55 GMT
+recorded_at: Thu, 26 Oct 2017 19:05:09 GMT
