--- a/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
+++ b/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:36:57 GMT
+    - Thu, 26 Oct 2017 19:31:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=hgbh1qeh8rgqv8dkknhhu510f7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:36:58 GMT
+recorded_at: Thu, 26 Oct 2017 19:31:23 GMT
