--- a/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
+++ b/house.gov.by/8994cfb10119f6028c06e0f21a0c4d67f4f2ec14.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:53:03 GMT
+    - Thu, 26 Oct 2017 19:33:10 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7klko7gdn3e3htve82rvktv9e0; path=/
+    - PHPSESSID=c818kap3jn6g8amp9p2p2i8jk5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:53:04 GMT
+recorded_at: Thu, 26 Oct 2017 19:33:11 GMT
