--- a/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
+++ b/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 18:06:25 GMT
+    - Thu, 26 Oct 2017 19:34:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=08jdprlfm6vi7vda7829e97vo0; path=/
+    - PHPSESSID=vkifjc4kapqierqc4kjl9fnb03; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 18:06:26 GMT
+recorded_at: Thu, 26 Oct 2017 19:34:56 GMT
