--- a/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
+++ b/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:02:49 GMT
+    - Thu, 26 Oct 2017 19:45:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=1v2qfiihfh4m5g7203j5e4kub1; path=/
+    - PHPSESSID=2ob2h1fuoqo0fo98btvbjjg1f6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:02:50 GMT
+recorded_at: Thu, 26 Oct 2017 19:45:28 GMT
