--- a/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
+++ b/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:59:53 GMT
+    - Thu, 26 Oct 2017 20:14:48 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=rr98qi2omj2a9jq7e58m3cv017; path=/
+    - PHPSESSID=d6o5js4ojol6dql86f6daqd214; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:59:54 GMT
+recorded_at: Thu, 26 Oct 2017 20:14:49 GMT
