--- a/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
+++ b/house.gov.by/34b939f57a446b8616b2a998ea274073dff804fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 18:24:15 GMT
+    - Thu, 26 Oct 2017 20:17:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=dklmjrad50oojcn7e4b23k13r7; path=/
+    - PHPSESSID=5h8elg6vr8reo1iht1oq0vchr3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 18:24:16 GMT
+recorded_at: Thu, 26 Oct 2017 20:17:43 GMT
