--- a/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
+++ b/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 19:52:47 GMT
+    - Thu, 26 Oct 2017 20:24:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=n14bs4tvea2lkftecs5s1qp0f2; path=/
+    - PHPSESSID=v20u2gappvhdb9to16ae789942; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 19:52:49 GMT
+recorded_at: Thu, 26 Oct 2017 20:24:37 GMT
