--- a/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
+++ b/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 19:15:06 GMT
+    - Thu, 26 Oct 2017 20:29:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=tqrlnfepaur5655ohbqm1q87j7; path=/
+    - PHPSESSID=0088nsvkra9cmpj143dhrqtp67; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 19:15:06 GMT
+recorded_at: Thu, 26 Oct 2017 20:29:27 GMT
