--- a/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
+++ b/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 19:22:56 GMT
+    - Thu, 26 Oct 2017 20:31:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7aqkl9t4l90ue0kt9gojrn83t6; path=/
+    - PHPSESSID=kj6vetq8bm8dciacm5qg2bgnn7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 19:22:57 GMT
+recorded_at: Thu, 26 Oct 2017 20:31:01 GMT
