--- a/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
+++ b/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:10:02 GMT
+    - Thu, 26 Oct 2017 20:43:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=p4hji2p5omcq5e64f0ctt42s30; path=/
+    - PHPSESSID=l962821mt4ds95p4kdgg6bn9l4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:10:02 GMT
+recorded_at: Thu, 26 Oct 2017 20:43:31 GMT
