--- a/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
+++ b/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:13:13 GMT
+    - Thu, 26 Oct 2017 20:48:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=99gb9ql8lf5r68p5sudi42udf1; path=/
+    - PHPSESSID=587o47752mss4rtlcigg47lrs1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:13:14 GMT
+recorded_at: Thu, 26 Oct 2017 20:48:50 GMT
