--- a/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
+++ b/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:08:13 GMT
+    - Thu, 26 Oct 2017 20:58:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=7gvrrnt59lmhdju43jspkvrs92; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:08:13 GMT
+recorded_at: Thu, 26 Oct 2017 20:58:43 GMT
