--- a/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
+++ b/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 18:55:21 GMT
+    - Thu, 26 Oct 2017 21:23:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=a99n8t53stmlfbl3ckcd8q4vb0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 18:55:21 GMT
+recorded_at: Thu, 26 Oct 2017 21:23:30 GMT
