--- a/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
+++ b/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 19:55:23 GMT
+    - Thu, 26 Oct 2017 21:23:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=piksj31r68odovfqrv9008vfs1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 19:55:24 GMT
+recorded_at: Thu, 26 Oct 2017 21:23:57 GMT
