--- a/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
+++ b/house.gov.by/1ae2fbafbfedff7028b54da2f7056f5bdc1df8e7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 19:46:30 GMT
+    - Thu, 26 Oct 2017 21:27:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=i2s0d4tmtfaas7b610c348ovt1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 19:46:32 GMT
+recorded_at: Thu, 26 Oct 2017 21:27:15 GMT
