--- a/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
+++ b/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:10:35 GMT
+    - Thu, 26 Oct 2017 21:41:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=vc7cfgd4en1d80h8bq0r2vcr05; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:10:36 GMT
+recorded_at: Thu, 26 Oct 2017 21:41:00 GMT
